wacom: write to status_led{0,1}_select only

if a device has only one ring/strip, use status_led0_select;
otherwise the left ring/strip is controlled by status_led1_select
and the right ring/strip by status_led0_select.

https://bugzilla.gnome.org/show_bug.cgi?id=676558